Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-480

HAWQ RM does not calculate correct yarn cluster volume

    XMLWordPrintableJSON

Details

    Description

      PST,,,p52869,th1140631744,,,,0,con4,,seg-10000,,,,,"LOG","00000","Removed pending GRM request from root resource queue by (2048 MB, 1.000000 CORE) to (0 MB, 0.000000 CORE)",,,,,,,0,,"resqueuemanager.c",4343,
      2016-02-29 22:34:17.481384 PST,,,p52869,th1140631744,,,,0,con4,,seg-10000,,,,,"FATAL","XX000","HAWQ RM Validation. Allocated too much resource in resource pool. (8192 MB, 4.000000 CORE) (resourcepool.c:3835)",,,,,,,0,,"resourcepool.c",3835,"Stack trace:
      1 0x87152f postgres <symbol not found> + 0x87152f
      2 0x871c09 postgres elog_finish + 0xa9
      3 0x8ddd41 postgres validateResourcePoolStatus + 0x501
      4 0x8fd517 postgres MainHandlerLoop + 0x1a7
      5 0x8fda20 postgres ResManagerMainServer2ndPhase + 0x1e0
      6 0x8fde54 postgres ResManagerMain + 0x394
      7 0x8fe1e1 postgres ResManagerProcessStartup + 0x181
      8 0x75e0c8 postgres <symbol not found> + 0x75e0c8
      9 0x75ef82 postgres <symbol not found> + 0x75ef82
      10 0x76432d postgres <symbol not found> + 0x76432d
      11 0x765e8e postgres PostmasterMain + 0xc7e
      12 0x6c029a postgres main + 0x48a
      13 0x3c1e81ed1d libc.so.6 __libc_start_main + 0xfd
      14 0x4a1c39 postgres <symbol not found> + 0x4a1c39
      "

      Attachments

        Activity

          People

            yjin Yi Jin
            yjin Yi Jin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: