HAWQ-480. HAWQ RM does not calculate correct yarn cluster volume